--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,13 @@
+::: callout-note
+**Instruction**
+
+1 Introduction index.qmd
+
+Explain why you chose this topic, and the questions you are interested in studying. Provide context for readers who are not familiar with the topic.
+
+(suggested: 1/2 page)
+:::
+
 # Introduction
 
 Hi, this is my intro
