--- a/index.qmd
+++ b/index.qmd
@@ -11,3 +11,5 @@ Explain why you chose this topic, and the questions you are interested in studyi
 # Introduction
 
 Hi, this is my intro
+
+Creating a new branch!
