first data analysis

--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@
 
 Explain why you chose this topic, and the questions you are interested in studying. Provide context for readers who are not familiar with the topic.
 
-(suggested: 1/2 page)
+(suggested: 1/2 page) 250-500 words
 :::
 
 # Introduction
