--- a/results.qmd
+++ b/results.qmd
@@ -1,1 +1,798 @@
 # Results
+
+
+Possible 10 Charts based on Problem Set1
+hitogram / facets (ps1)
+boxplot jitter (ps1)
+with ridgeline (ps1)
+density lines
+bar chart lump facet
+scattter plot
+Density plot
+geom_point with facet 9x9 grid (ps2 california)
+Cleveland dot plot
+ggparcords
+parcoords
+likert
+mosaic
+alluvium
+11
+
+
+<!-- https://data.cityofnewyork.us/City-Government/Citywide-Payroll-Data-Fiscal-Year-/k397-673e/about_data -->
+
+
+
+
+
+```{r}
+library(tidyverse)
+library(ggplot2)
+```
+
+
+
+
+```{r}
+payroll_data_source <- read.csv("./data_source/Citywide_Payroll_Data__Fiscal_Year__20241111.csv") 
+payroll_data <- payroll_data_source
+```
+
+
+```{r}
+names(payroll_data)
+```
+
+```{r}
+payroll_data <- data.frame(payroll_data_source)
+```
+
+
+```{r}
+head(payroll_data,5)
+```
+
+```{r}
+print(names(payroll_data))
+
+names(payroll_data) <- gsub("[\\.]+", "_", tolower(names(payroll_data_source)))
+
+print(names(payroll_data))
+
+```
+
+
+
+```{r}
+payroll_data |> 
+  group_by(agency_name, work_location_borough) |> 
+  summarise(
+    Total_records = n()
+  )
+```
+
+
+```{r}
+payroll_data |> 
+  group_by(agency_name) |> 
+  summarise(
+    Total_records = n_distinct(work_location_borough)
+  )
+```
+
+
+```{r}
+payroll_data |> 
+  group_by(agency_name) |> 
+  summarise(
+    Total_records = n()
+  ) 
+  
+```
+
+
+```{r}
+payroll_data |> 
+  mutate(agency_name_clean = trimws(gsub("#\\d+$", "", agency_name))) |> 
+  group_by(agency_name_clean) |> 
+  summarise(
+    Total_records = n()
+  ) 
+  
+```
+
+
+
+```{r}
+payroll_data <- 
+  payroll_data |> 
+  mutate(agency_name_clean = trimws(gsub("#\\d+$", "", agency_name)))
+  
+```
+
+
+```{r}
+payroll_data |> 
+  # mutate(agency_name_clean = trimws(gsub("#\\d+$", "", agency_name))) |> 
+  group_by(agency_name_clean) |> 
+  summarise(
+    Total_records = n()
+  ) |> 
+  arrange(desc(Total_records))
+  
+```
+
+
+
+```{r}
+payroll_data |> 
+  filter(fiscal_year == "2024") |>
+  filter(agency_name_clean %in%  c(
+    "DEPT OF ED PEDAGOGICAL",
+    "DEPT OF ED PER SESSION TEACHER",
+    "DEPT OF ED HRLY SUPPORT STAFF","DEPT OF ED PARA PROFESSIONALS",
+    "DEPT OF ED PEDAGOGICAL",
+    "DEPT OF ED PER DIEM TEACHERS",	
+    "DEPT OF ED PER SESSION TEACHER",
+    "POLICE DEPARTMENT",
+    "FIRE DEPARTMENT"
+    )) |> 
+group_by(agency_name_clean) |> 
+  summarise(
+    Total_records = n(),
+    n_work_location_borough = n_distinct(work_location_borough)
+  ) |> 
+  arrange(desc(Total_records))
+```
+
+
+```{r}
+payroll_data |> 
+  filter(fiscal_year == "2024") |>
+  filter(agency_name_clean %in%  c(
+    "DEPT OF ED PEDAGOGICAL",
+    "DEPT OF ED PER SESSION TEACHER",
+    "DEPT OF ED HRLY SUPPORT STAFF","DEPT OF ED PARA PROFESSIONALS",
+    "DEPT OF ED PEDAGOGICAL",
+    "DEPT OF ED PER DIEM TEACHERS",	
+    "DEPT OF ED PER SESSION TEACHER",
+    "POLICE DEPARTMENT",
+    "FIRE DEPARTMENT"
+    )) |> 
+group_by(agency_name_clean,work_location_borough) |> 
+  summarise(
+    Total_records = n()
+  ) |> 
+  arrange(agency_name_clean,work_location_borough)
+```
+
+```{r}
+payroll_data |> 
+  # filter(fiscal_year == "2024") |>
+  filter(agency_name_clean %in%  c(
+    "POLICE DEPARTMENT",
+    "FIRE DEPARTMENT"
+    )) |> 
+group_by(agency_name_clean) |> 
+  summarise(
+    Total_records = n()
+  ) |> 
+  arrange(agency_name_clean)
+```
+
+```{r}
+payroll_data |> 
+  # filter(fiscal_year == "2024") |>
+  filter(agency_name_clean %in%  c(
+    "POLICE DEPARTMENT",
+    "FIRE DEPARTMENT"
+    )) |> 
+group_by(agency_name_clean,fiscal_year) |> 
+  summarise(
+    Total_records = n()
+  ) |> 
+  arrange(agency_name_clean,fiscal_year)
+```
+
+
+```{r}
+payroll_data_fire_police <-
+  payroll_data |> 
+  # filter(fiscal_year == "2024") |>
+  filter(agency_name_clean %in%  c(
+    "POLICE DEPARTMENT",
+    "FIRE DEPARTMENT"
+    )) 
+```
+
+
+
+
+
+
+
+
+```{r}
+payroll_data_fire_police |> 
+  filter(fiscal_year == "2024") |>
+  summary()
+```
+
+
+
+```{r}
+payroll_data_fire_police |> 
+  filter(fiscal_year == "2024") |>
+  group_by(agency_name_clean,title_description) |> 
+  summarise(
+    Total_records = n()
+    ,.groups = "drop"
+  ) |> 
+  arrange(agency_name_clean,desc(Total_records))
+```
+
+
+
+
+```{r}
+payroll_data_fire_police <-
+  payroll_data_fire_police |> 
+  mutate(total_pay = rowSums(across(c(regular_gross_paid, total_ot_paid, total_other_pay)),na.rm = TRUE))
+```
+
+```{r}
+library(lubridate)
+
+payroll_data_fire_police <- 
+  payroll_data_fire_police |> 
+  mutate(agency_start_date_clean = mdy(agency_start_date))
+
+```
+
+
+```{r}
+payroll_data_fire_police |> 
+  select(agency_start_date, agency_start_date_clean) |> 
+  head()
+```
+
+
+
+```{r}
+head(payroll_data_fire_police)
+```
+
+```{r}
+payroll_data_fire_police |> 
+  summarise(across(everything(), ~ sum(is.na(.))))
+```
+
+```{r}
+payroll_data_fire_police |> 
+  # filter(fiscal_year == "2024") |>
+  group_by(fiscal_year,payroll_number) |> 
+  summarise(
+    Total_records = n()
+  ) |> 
+  arrange(fiscal_year,payroll_number)
+
+```
+
+
+
+
+```{r}
+payroll_data_fire_police |> 
+  # filter(fiscal_year == "2024") |>
+  group_by(agency_name_clean) |> 
+  summarise(
+    Total_records = n(),
+    min(agency_start_date_clean),
+    max(agency_start_date_clean)
+  ) |> 
+  arrange(agency_name_clean,desc(Total_records))
+```
+
+```{r}
+
+# good for alluvium, year start, year paid
+payroll_data_fire_police |> 
+  mutate(year_agency_start_date_clean = year(agency_start_date_clean)) |> 
+  group_by(year_agency_start_date_clean) |> 
+  summarise(
+    Total_records = n(),
+  ) |> 
+  arrange(year_agency_start_date_clean)
+
+```
+
+
+```{r}
+
+# good for alluvium, year start, year paid
+payroll_data_fire_police |> 
+  mutate(year_agency_start_date_clean = year(agency_start_date_clean)) |> 
+  filter(year_agency_start_date_clean == 1960)
+
+```
+
+
+
+
+```{r}
+payroll_data_fire_police |> 
+  filter(fiscal_year == "2024") |>
+  group_by(agency_name_clean,pay_basis) |> 
+  summarise(
+    Total_records = n(),
+    TOTAL_total_pay = sum(total_pay),
+    TOTAL_regular_gross_paid = sum(regular_gross_paid),
+    TOTAL_total_ot_paid = sum(total_ot_paid),
+    TOTAL_total_other_pay = sum(total_other_pay),
+    PCT_total_pay = sum(total_pay) / sum(total_pay),
+    PCT_regular_gross_paid = sum(regular_gross_paid)/ sum(total_pay),
+    PCT_total_ot_paid = sum(total_ot_paid)/ sum(total_pay),
+    PCT_total_other_pay = sum(total_other_pay)/ sum(total_pay),
+    records_with_1 = sum(is.na(regular_gross_paid)),
+    records_with_2 = sum(is.na(total_ot_paid)),
+    records_with_3 = sum(is.na(total_other_pay)),
+  ) |> 
+  arrange(agency_name_clean,pay_basis,desc(Total_records))
+  # format(n=1)
+  # format(scientific=TRUE)
+```
+
+
+```{r}
+payroll_data_fire_police |> 
+  filter(fiscal_year == "2024") |>
+  filter(title_description == "CHAPLAIN")
+  # filter(pay_basis == "Prorated Annual") 
+```
+
+
+remove pro_rated data
+"Prorated Annual"
+
+
+
+```{r}
+payroll_data_fire_police |> 
+  filter(fiscal_year > "2014") |>
+  group_by(agency_name_clean,fiscal_year) |> 
+  summarise(
+    Total_records = n(),
+    TOTAL_total_pay = sum(total_pay),
+    TOTAL_regular_gross_paid = sum(regular_gross_paid),
+    TOTAL_total_ot_paid = sum(total_ot_paid),
+    TOTAL_total_other_pay = sum(total_other_pay),
+    PCT_total_pay = sum(total_pay) / sum(total_pay),
+    PCT_regular_gross_paid = sum(regular_gross_paid)/ sum(total_pay),
+    PCT_total_ot_paid = sum(total_ot_paid)/ sum(total_pay),
+    PCT_total_other_pay = sum(total_other_pay)/ sum(total_pay),
+    records_with_1 = sum(is.na(regular_gross_paid)),
+    records_with_2 = sum(is.na(total_ot_paid)),
+    records_with_3 = sum(is.na(total_other_pay)),
+  ) |> 
+  arrange(agency_name_clean,fiscal_year,desc(Total_records))
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+```{r}
+payroll_data_fire_police |> 
+  filter(fiscal_year > "2014") |>
+  group_by(agency_name_clean,fiscal_year) |> 
+  summarise(
+    Total_records = n(),
+    TOTAL_total_pay = n_distinct(title_description)
+  ) |> 
+  arrange(agency_name_clean,fiscal_year,desc(Total_records))
+
+```
+
+
+
+
+
+```{r}
+payroll_data_fire_police |> 
+  mutate(year_agency_start_date_clean = year(agency_start_date_clean)) |> 
+  filter(year_agency_start_date_clean == "2024") |>
+  filter(fiscal_year > "2014") |>
+  group_by(agency_name_clean,title_description) |> 
+  summarise(
+    Total_records = n()
+    ,mean(base_salary)
+  ) |> 
+  arrange(agency_name_clean,desc(Total_records))
+
+```
+
+
+
+
+
+
+
+```{r}
+payroll_data_fire_police |> 
+  # mutate(year_agency_start_date_clean = year(agency_start_date_clean)) |> 
+  # filter(fiscal_year == "2018") |>
+  filter(title_description %in%  c("FIREFIGHTER","POLICE OFFICER")) |>
+  group_by(agency_name_clean,pay_basis,fiscal_year,title_description) |> 
+  summarise(
+    Total_records = n()
+    ,mean(base_salary)
+    ,mean(total_pay)
+  ) |> 
+  arrange(agency_name_clean,desc(Total_records))
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   # filter(title_description== "TEACHER- PER SESSION") |> -->
+<!--   filter(fiscal_year == "2024") |> -->
+<!--   filter(leave_status_as_of_june_30=="ACTIVE") |> -->
+<!--   filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER","DEPT OF ED HRLY SUPPORT STAFF","DEPT OF ED PARA PROFESSIONALS", -->
+<!-- "DEPT OF ED PEDAGOGICAL", -->
+<!-- "DEPT OF ED PER DIEM TEACHERS", -->
+<!-- "DEPT OF ED PER SESSION TEACHER"	)) |> -->
+<!--   group_by(agency_name,title_description) |> -->
+<!--   summarise( -->
+<!--     Total_records = n(), -->
+<!--     base_salary_sum = sum(base_salary), -->
+<!--     base_salary_avg = mean(regular_gross_paid), -->
+<!--     base_salary_sum2 = sum(regular_gross_paid), -->
+<!--     # total_ot_sum = round(sum(total_ot_pay),0), -->
+<!--     total_other_sum = round(sum(total_other_pay),0), -->
+<!--     total_paid_sum = round(sum(total_paid),0), -->
+<!--     total_paid_avg = mean(total_paid), -->
+
+<!--   ) |> -->
+<!--   arrange(desc(Total_records)) -->
+<!-- ``` -->
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   # filter(title_description== "TEACHER- PER SESSION") |> -->
+<!--   filter(fiscal_year == "2024") |> -->
+<!--   filter(leave_status_as_of_june_30=="ACTIVE") |> -->
+<!--   filter(agency_name %in%  c("POLICE DEPARTMENT"	)) |> -->
+<!--   group_by(agency_name,work_location_borough,title_description) |> -->
+<!--   summarise( -->
+<!--     Total_records = n(), -->
+<!--     base_salary_sum = sum(base_salary), -->
+<!--     base_salary_avg = mean(regular_gross_paid), -->
+<!--     base_salary_sum2 = sum(regular_gross_paid), -->
+<!--     # total_ot_sum = round(sum(total_ot_pay),0), -->
+<!--     total_other_sum = round(sum(total_other_pay),0), -->
+<!--     total_paid_sum = round(sum(total_paid),0), -->
+<!--     total_paid_avg = mean(total_paid), -->
+
+<!--   ) |> -->
+<!--   arrange(agency_name,title_description,work_location_borough) -->
+<!--   # arrange(desc(Total_records)) -->
+<!-- ``` -->
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   # filter(title_description== "TEACHER- PER SESSION") |> -->
+<!--   # filter(fiscal_year == "2024") |> -->
+<!--   filter(leave_status_as_of_june_30=="ACTIVE") |> -->
+<!--   filter(agency_name %in%  c("POLICE DEPARTMENT"	)) |> -->
+<!--   group_by(title_description) |> -->
+<!--   summarise( -->
+<!--     Total_records = n(), -->
+<!--     base_salary_sum = sum(base_salary), -->
+<!--     base_salary_avg = mean(regular_gross_paid), -->
+<!--     base_salary_sum2 = sum(regular_gross_paid), -->
+<!--     # total_ot_sum = round(sum(total_ot_pay),0), -->
+<!--     total_other_sum = round(sum(total_other_pay),0), -->
+<!--     total_paid_sum = round(sum(total_paid),0), -->
+<!--     total_paid_avg = mean(total_paid), -->
+
+<!--   ) |> -->
+<!--   # arrange(title_description) -->
+<!--   arrange(desc(Total_records)) -->
+<!-- ``` -->
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   mutate(agency_name_clean = trimws(gsub("#\\d+$", "", Agency.Name))) |> -->
+<!--   filter(grepl("DA\\s*$", agency_name_clean, ignore.case = TRUE)) |> -->
+<!--   group_by(agency_name_clean,Work.Location.Borough) |> -->
+<!--   summarise( -->
+<!--     Total_records = n() -->
+<!--   ) -->
+
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   group_by(Work.Location.Borough) |> -->
+<!--   summarise( -->
+<!--     Total_records = n() -->
+<!--   ) -->
+
+<!-- ``` -->
+
+
+
+
+<!-- ```{r} -->
+<!-- payroll_data <- payroll_data |> -->
+<!--   mutate(work_location_borough = toupper(work_location_borough)) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   group_by(work_location_borough,fiscal_year) |> -->
+<!--   summarise( -->
+<!--     Total_records = n() -->
+<!--   ) -->
+
+<!-- ``` -->
+
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   group_by(title_description) |> -->
+<!--   summarise( -->
+<!--     Total_records = n() -->
+<!--   ) |> -->
+<!--   arrange(desc(Total_records)) -->
+
+<!-- ``` -->
+
+
+
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   filter(title_description== "TEACHER") |> -->
+<!--   group_by(title_description) |> -->
+<!--   summarise( -->
+<!--     Total_records = n(), -->
+<!--     base_salary_sum = sum(base_salary), -->
+<!--     base_salary_avg = mean(base_salary) -->
+<!--   ) |> -->
+<!--   arrange(desc(Total_records)) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   filter(title_description== "TEACHER- PER SESSION") |> -->
+<!--   # filter(fiscal_year == "2024") |> -->
+<!--   group_by(agency_name,title_description,work_location_borough) |> -->
+<!--   summarise( -->
+<!--     Total_records = n(), -->
+<!--     base_salary_sum = sum(base_salary), -->
+<!--     base_salary_avg = mean(base_salary) -->
+<!--   ) |> -->
+<!--   arrange(desc(Total_records)) -->
+<!-- ``` -->
+
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   filter(title_description== "TEACHER") -->
+<!-- ``` -->
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   filter(title_description== "TEACHER- PER SESSION") -->
+<!-- ``` -->
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   # filter(title_description== "TEACHER- PER SESSION") |> -->
+<!--   # filter(fiscal_year == "2024") |> -->
+<!--   filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |> -->
+<!--   group_by(agency_name,work_location_borough) |> -->
+<!--   summarise( -->
+<!--     Total_records = n(), -->
+<!--     base_salary_sum = sum(base_salary), -->
+<!--     base_salary_avg = mean(base_salary) -->
+<!--   ) |> -->
+<!--   arrange(desc(Total_records)) -->
+<!-- ``` -->
+
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   # filter(title_description== "TEACHER- PER SESSION") |> -->
+<!--   # filter(fiscal_year == "2024") |> -->
+<!--   # filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |> -->
+<!--   group_by(agency_name,work_location_borough) |> -->
+<!--   summarise( -->
+<!--     Total_records = n(), -->
+<!--     base_salary_sum = sum(base_salary), -->
+<!--     base_salary_avg = mean(base_salary) -->
+<!--   ) |> -->
+<!--   arrange(desc(agency_name)) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   # filter(title_description== "TEACHER- PER SESSION") |> -->
+<!--   filter(fiscal_year == "2024") |> -->
+<!--   filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |> -->
+<!--   group_by(agency_name,work_location_borough,pay_basis) |> -->
+<!--   summarise( -->
+<!--     Total_records = n(), -->
+<!--     base_salary_sum = sum(base_salary), -->
+<!--     base_salary_avg = mean(base_salary) -->
+<!--   ) |> -->
+<!--   arrange(desc(agency_name)) -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   # filter(title_description== "TEACHER- PER SESSION") |> -->
+<!--   # filter(fiscal_year == "2024") |> -->
+<!--   filter(pay_basis == "per Annum") |> -->
+<!--   # filter(leave_status_as_of_june_30=="ACTIVE") |> -->
+<!--   filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |> -->
+<!--   group_by(agency_name,fiscal_year,pay_basis,leave_status_as_of_june_30) |> -->
+<!--   summarise( -->
+<!--     Total_records = n(), -->
+<!--     base_salary_sum = sum(base_salary), -->
+<!--     base_salary_avg = mean(base_salary) -->
+<!--   ) |> -->
+<!--   arrange(desc(agency_name)) -->
+<!-- ``` -->
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   filter(title_description== "TEACHER- PER SESSION") |> -->
+<!--   filter(fiscal_year == "2024") |> -->
+<!--   filter(leave_status_as_of_june_30=="CEASED") |> -->
+<!--   filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) -->
+<!-- ``` -->
+
+
+
+<!-- ```{r} -->
+<!-- payroll_data <- payroll_data |> -->
+<!--   # mutate(base_salary_std = if_else(pay_basis == "per Day", base_salary * 260, base_salary) |> -->
+<!--   mutate( -->
+<!--     regular_gross_paid = as.numeric(regular_gross_paid), -->
+<!--     total_ot_paid = as.numeric(total_ot_paid), -->
+<!--     total_other_pay = as.numeric(total_other_pay) -->
+<!--   ) |> -->
+<!--   mutate(total_paid = regular_gross_paid +total_ot_paid + total_other_pay) -->
+<!-- ``` -->
+
+
+<!-- ```{r} -->
+<!-- head(payroll_data) -->
+<!-- ``` -->
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--     filter(fiscal_year == "2024") |> -->
+<!--   filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |> -->
+
+<!-- ggplot() + -->
+<!--     geom_point(mapping = aes(x=base_salary, -->
+<!--                              y=regular_gross_paid, -->
+<!--                              color = pay_basis -->
+<!--                              ), -->
+<!--       size = 0.5, -->
+<!--       alpha = 0.5, -->
+<!--       ) -->
+<!-- ``` -->
+
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--     filter(fiscal_year == "2024") |> -->
+<!--   filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |> -->
+
+<!-- ggplot() + -->
+<!--     geom_point(mapping = aes(x=total_paid, -->
+<!--                              y=regular_gross_paid, -->
+<!--                              color = leave_status_as_of_june_30 -->
+<!--                              ), -->
+<!--       size = 0.5, -->
+<!--       alpha = 0.5, -->
+<!--       )+ -->
+<!--    scale_x_continuous(labels = scales::label_comma()) + -->
+<!--   scale_y_continuous(labels = scales::label_comma()) + -->
+<!--   coord_fixed() -->
+<!-- ``` -->
+
+<!-- ```{r} -->
+<!-- payroll_data |> -->
+<!--   filter(fiscal_year == "2024") |> -->
+<!--   filter(agency_name %in%  c("DEPT OF ED PEDAGOGICAL","DEPT OF ED PER SESSION TEACHER")) |> -->
+
+<!-- ggplot() + -->
+<!--     geom_point(mapping = aes(x=regular_gross_paid, -->
+<!--                              y=total_other_pay, -->
+<!--                              color = leave_status_as_of_june_30 -->
+<!--                              ), -->
+<!--       size = 0.5, -->
+<!--       alpha = 0.5, -->
+<!--       )+ -->
+<!--    scale_x_continuous(labels = scales::label_comma()) + -->
+<!--   scale_y_continuous(labels = scales::label_comma()) + -->
+<!--   coord_fixed() -->
+<!-- ``` -->
+
+
