--- a/data.qmd
+++ b/data.qmd
@@ -26,10 +26,103 @@ changing to a new branch =)
 
 ## Description
 
-Identify one or more data sources (see II. D. above) that you propose to draw on for the project. 
+For this project, we will be using the **Citywide Payroll Data**. 
+
+This dataset is available via NYC OpenData and provided by the Office of Payroll Administration (OPA).
+```{r}
+library(knitr)
+
+# Create a tibble for the metadata
+metadata <- tibble::tibble(
+  Field = c(
+    "Agency",
+    "Data Category",
+    "Dataset Name",
+    "Frequency of Updates", 
+    "Date Created", 
+    "Data Last Updated", 
+    "Dimensions",
+    "Each row represents"
+  ),
+  Value = c(
+    "Office of Payroll Administration (OPA)",
+    "City Government",
+    "Citywide Payroll Data (Fiscal Year)",
+    "Annually", 
+    "October 31, 2015", 
+    "October 30, 2024", 
+    "6,225,611 rows and 17 columns",
+    "City Employee Salary per Fiscal Year"
+  )
+)
+
+# Print the metadata table using kable
+kable(metadata, col.names = NULL, caption = "Dataset Metadata", align = "l")
+
+```
 
 
-For each, describe how the data are collected and by whom. 
+
+### Data Format
+
+This dataset contains a variety of Text, Number and Date columns.
+
+```{r}
+library(tibble)
+library(knitr)
+
+payroll_data_format <- tibble(
+  column_name = c(
+    "Fiscal Year", "Payroll Number", "Agency Name", "Last Name", "First Name", 
+    "Mid Init", "Agency Start Date", "Work Location Borough", 
+    "Title Description", "Leave Status as of June 30", "Base Salary", 
+    "Pay Basis", "Regular Hours", "Regular Gross Paid", "OT Hours", 
+    "Total OT Paid", "Total Other Pay"
+  ),
+  description = c(
+    "Fiscal Year", "Payroll Number", "The Payroll agency that the employee works for", 
+    "Last name of employee", "First name of employee", 
+    "Middle initial of employee", "Date which employee began working for their current agency", 
+    "Borough of employee's primary work location", "Civil service title description of the employee", 
+    "Status of employee as of the close of the relevant fiscal year: Active, Ceased, or On Leave", 
+    "Base Salary assigned to the employee", 
+    "Lists whether the employee is paid on an hourly, per diem or annual basis", 
+    "Number of regular hours employee worked in the fiscal year", 
+    "The amount paid to the employee for base salary during the fiscal year", 
+    "Overtime Hours worked by employee in the fiscal year", 
+    "Total overtime pay paid to the employee in the fiscal year", 
+    "Includes any compensation in addition to gross salary and overtime pay, i.e., Differentials, lump sums, uniform allowance, meal allowance, retroactive pay increases, settlement amounts, and bonus pay, if applicable."
+  ),
+  # api_field_name = c(
+  #   "fiscal_year", "payroll_number", "agency_name", "last_name", "first_name", 
+  #   "mid_init", "agency_start_date", "work_location_borough", 
+  #   "title_description", "leave_status_as_of_june_30", "base_salary", 
+  #   "pay_basis", "regular_hours", "regular_gross_paid", "ot_hours", 
+  #   "total_ot_paid", "total_other_pay"
+  # ),
+  data_type = c(
+    "Number", "Number", "Text", "Text", "Text", 
+    "Text", "Floating Timestamp", "Text", 
+    "Text", "Text", "Number", 
+    "Text", "Number", "Number", "Number", 
+    "Number", "Number"
+  )
+)
+
+names(payroll_data_format) <- c("Column Name","Description","Data Type")
+
+kable(payroll_data_format,caption = "Dataset Format", align = "l")
+```
+
+
+
+
+
+
+
+The data is update Annualy, and the last update was done on October 30, 2024. This dataset was created in October 31, 2015, so we have about 10 years on complete data.
+
+Dimensions: 6,225,611 rows and 17 columns
 
 Describe the format of the data, 
 
@@ -57,3 +150,21 @@ https://data.cityofnewyork.us/City-Government/Citywide-Payroll-Data-Fiscal-Year-
 ## Missing value analysis
 
 Missing value stuff goes here.
+
+
+
+
+
+
+
+## Deciding on final data selection
+
+
+
+here is a decision
+
+
+
+
+
+
